parser for #7 and datadump for front-end route

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/index.js"
+    "start": "node ./bin/index.js",
+    "parsedata": "node ./data/scripts/index.js"
   },
   "repository": {
     "type": "git",
