--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/DeMoorJasper/cityhacks#readme",
   "dependencies": {
-    "express": "^4.16.2",
-    "osrm": "^5.13.0"
+    "express": "^4.16.2"
   }
 }
