--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/DeMoorJasper/cityhacks#readme",
   "dependencies": {
+    "curl": "^0.1.4",
     "express": "^4.16.2",
     "sqlite": "^2.8.0"
   }
