--- a/front-end/package.json
+++ b/front-end/package.json
@@ -95,6 +95,7 @@
     "preact-router": "^2.5.1",
     "promise-polyfill": "^6.0.2",
     "proptypes": "^1.0.0",
+    "react-mapbox-gl": "^3.2.0",
     "serve": "^6.0.0"
   }
 }
